# Thesis

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/lwr_fri_msgs/: CartesianImpedance.h  FriJointCommand.h  FriJointImpedance.h  FriJointState.h  FriRobotData.h  FriRobotJntData.h
devel/include/motion_control_msgs/: JointAccelerations.h  JointEfforts.h  JointPositions.h  JointVelocities.h
devel/include/soem_beckhoff_drivers/: AnalogMsg.h  CommMsg.h  CommMsgBig.h  DigitalMsg.h  EncoderInMsg.h  EncoderMsg.h  EncoderOutMsg.h  PSUMsg.h
devel/include/soem_ebox/: EBOXAnalog.h  EBOXDigital.h  EBOXOut.h  EBOXPWM.h
devel/lib/pkgconfig/: ati_iface-gnulinux.pc  ati_iface.pc  cali_connector-gnulinux.pc  cali_connector.pc  cartesian_motion_control-gnulinux.pc  cartesian_motion_control.pc  etasl_application_test.pc  giel_component-gnulinux.pc  giel_component.pc  lwr_fri-gnulinux.pc  lwr_fri.pc  lwr_fri_msgs.pc  motion_control_msgs.pc  naxes_motion_control-gnulinux.pc  naxes_motion_control.pc  rtt_lwr_fri_msgs-gnulinux.pc  rtt_lwr_fri_msgs.pc  rtt_motion_control_msgs-gnulinux.pc  rtt_motion_control_msgs.pc  soem_beckhoff_drivers-gnulinux.pc  soem_beckhoff_drivers.pc  soem_ebox-gnulinux.pc  soem_ebox.pc  soem_master-gnulinux.pc  soem_master.pc  viz_marker-gnulinux.pc  viz_marker.pc
src/cali_connector/: CMakeLists.txt
src/etasl_application_test/: CMakeLists.txt  README.md
src/viz_marker/: CMakeLists.txt  readme.md
src/viz_marker/src/: CMakeLists.txt  quat.cpp  quat.hpp  viz_marker-component.cpp  viz_marker-component.hpp
(+237 files in other folders)
